<resources>
    <string name="app_name">Psynder</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Пароль</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_swipe">Swipe</string>
    <string name="title_profile">Profile</string>
    <string name="title_liked">Liked</string>
    <string name="title_home">Home</string>
    <string name="looking_for_owner">Ищу хозяина</string>
    <string name="looking_for_dog">Ищу собаку</string>
    <string name="profile_logout">Выйти</string>
    <string name="home_info">Сейчас в Psynder:</string>
    <string name="home_info_users_template">пользователей: %s</string>
    <string name="home_info_shelters_template">приютов: %s</string>
    <string name="home_info_dogs_template">собак: %s</string>
    <string name="title_dogs">Собаки</string>
</resources>
