<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/catImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_cat_dancing_in_hoop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/infoTextView"
        style="@style/viewParent.headerText"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/home_info"
        android:textColor="@color/darkTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catImageView" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoAllTextViews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoTextView">

        <TextView
            android:id="@+id/infoUsersTextView"
            style="@style/viewParent.simpleText"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/home_info_users_template"
            android:textColor="@color/darkTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/infoSheltersTextView"
            style="@style/viewParent.simpleText"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/home_info_shelters_template"
            android:textColor="@color/darkTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoUsersTextView" />

        <TextView
            android:id="@+id/infoDogsTextView"
            style="@style/viewParent.simpleText"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/home_info_dogs_template"
            android:textColor="@color/darkTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoSheltersTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/cirLogoutButton"
        style="@style/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="48dp"
        android:text="@string/profile_logout"
        app:initialCornerAngle="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:spinning_bar_color="#FFF"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>